fixed profile campaign rows/heights and truncation

--- a/app/assets/stylesheets/profile.css.scss
+++ b/app/assets/stylesheets/profile.css.scss
@@ -11,3 +11,7 @@
 .profile-side-header {
 	text-align: center;
 }
+
+.profile_campaign_thumbnails {
+	height: 320px !important;
+}
